<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Socket Tester</string>
    <string name="action_settings">Settings</string>
    <string name="btn_client">Client</string>
    <string name="btn_server">Server</string>
    <string name="radio_client">Client</string>
    <string name="radio_server">Server</string>
    <string name="start_server">Start server</string>
    <string name="stop_server">Stop server</string>
    <string name="btn_about">About..</string>
    <string name="btn_exit">Exit</string>
    <string name="title_activity_client">Client</string>
    <string name="hello_world">Hello world!</string>
    <string name="server_address">Server address</string>
    <string name="server_port">Server port</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="info_to_send">Write here the info to send</string>
    <string name="server_answer">Server answer</string>
    <string name="clients_answer">Clients answer</string>
    <string name="save_cfg">Save</string>
    <string name="load_cfg">Load</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="hex">Hex</string>
    <string name="socket_connected">Socket connected</string>
    <string name="socket_not_connected">Socket not connected</string>
    <string name="server_on">Server on</string>
    <string name="server_off">Server off</string>
    <string name="unknown_host">Unknown host</string>
    <string name="couldn_connect_to_host">Could not connect to host</string>
    <string name="couldn_start_server">Could not start the server. Try using ports between 1024-65535</string>
    <string name="invalid_message">Invalid message</string>
    <string name="local_ip">Local IP</string>
    <string name="clients_connected">Clients connected</string>
    
    
</resources>
