<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.simplesockettester.MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="30"
     >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_weight="3"
        style="@style/text_title"
        />

    <Button
        android:id="@+id/btn_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_client"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_server"
        android:layout_weight="1" />
 
</LinearLayout>
