<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.simplesockettester.Client" >
	
    <TextView
	    android:id="@+id/txt_info"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toLeftOf="@+id/btn_connect"
	    style="@style/txt_info"
	    android:text="Blabla bla"
	    android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <EditText
        android:id="@+id/txt_server_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_info"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        
        android:ems="10"
        android:hint="@string/server_address" 
        style="@style/txt_input"
        >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txt_server_port"
        style="@style/txt_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txt_server_address"
        android:layout_below="@id/txt_server_address"
        android:ems="5"
        android:maxLength="5"
        android:hint="@string/server_port"
        android:inputType="number" />
	
	<Button
        android:id="@+id/btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_server_address"
        android:layout_toRightOf="@id/txt_server_port"
        android:text="@string/connect" />
    
	<EditText
	    android:id="@+id/editText1"
	    style="@style/txt_input"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@id/txt_server_port"
	    android:layout_alignRight="@+id/txt_server_address"
	    android:layout_below="@id/btn_connect"
	    android:ems="10"
	    android:hint="@string/info_to_send"
	    android:inputType="textMultiLine"
	    android:lines="5" />

	

</RelativeLayout>
